# CTF

./: README.md
backend/: Cargo.toml  client.js
backend/examples/: interactive_game.rs
backend/src/: error.rs  hello.rs  lib.rs  main.rs  room.rs  state.rs  state_handler.rs
backend/src/game/: mod.rs  player_move.rs  test_game.rs
frontend/: package-lock.json  package.json
frontend/src/: config.ts
frontend/src/app/: layout.tsx
frontend/src/app/host/[game_id]/: page.tsx
frontend/src/app/join/: page.tsx
frontend/src/app/new/: page.tsx
frontend/src/app/play/[game_id]/: page.tsx
frontend/src/components/: GameCanvas.tsx  GameControls.tsx  Home.tsx  Host.tsx  Join.tsx  New.tsx  Play.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/zustand/: module.ts  types.ts
frontend/src/ui/: Button.tsx  Input.tsx
